--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
       <!--  ION icon 2.0.1 CDN -->
-     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <style>
         .insta-block{
             position:relative;
